src/objects/Product_Rating__c.object
<CustomObject>
    <fields>
        <fullName>Approval__c</fullName>
        <label>Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>new</fullName>
                    <default>true</default>
                    <label>new</label>
                </value>
                <value>
                    <fullName>waiting</fullName>
                </value>
                <value>
                    <fullName>approve</fullName>
                </value>
                <value>
                    <fullName>reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>Product Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Design__c</fullName>
        <label>Rate Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Price__c</fullName>
        <label>Rate Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Safety__c</fullName>
        <label>Rate Safety</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Product Rating</label>
    <nameField>
        <label>Product Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>